--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="back">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 Evaluation
@@ -23,7 +23,7 @@
         </div>
     </nav>
 
-    <div class="container card bg-secondary text-white mb-3">
+    <div class="container card bg-secondary text-white mt-10 mb-3">
         <div class="card-body">
             <h5 class="card-title">Exercice 1</h5>
             <p>
